# systech-aidd-test

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  idea.md  pyproject.toml  systech_admin_key.txt  vision.md
.cursor/commands/: review.md
.cursor/plans/: -------d0-docker-setup-7fef90ef.plan.md  fe-sprint-1-mock-api-1040ff74.plan.md  fe-sprint-2-init-ea6b9f8e.plan.md  fe-sprint-3-dashboard-implementation-1a45cc79.plan.md  (+4 more)
alembic/: env.py
devops/: .dockerignore.api  .dockerignore.frontend  .env.production  D1-IMPLEMENTATION-SUMMARY.md  DOCUMENTATION-UPDATES.md  Dockerfile.api  Dockerfile.bot  Dockerfile.frontend  FILES-CREATED.md  NEXT-STEPS.md  QUICK-REFERENCE.md  README.md  SPRINT-D0-SUMMARY.md  TESTING.md  USERNAME-CHANGE-LOG.md  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.yml  entrypoint.sh  env.production.example
docs/: README.md  architecture-overview.md  codebase-tour.md  getting-started.md  idea.md  roadmap.md  tasklist.md  troubleshooting.md  vision.md  visual-guide.md  workflow.md
frontend/: README.md
prompts/: README.md  system_prompt.txt  system_prompt_python_code_reviewer.txt  system_prompt_technical_writer.txt  system_prompt_text2sql.txt
src/: __init__.py  __main__.py  api_server.py  config.py  conversation_manager.py  database.py  db_history_storage.py  history_storage.py  llm_client.py  main.py  message_formatter.py  models.py  prompt_loader.py  telegram_bot.py
tests/: conftest.py  test_config.py  test_conversation_manager.py  test_db_history_storage.py  test_history_storage.py  test_llm_client.py  test_main.py  test_message_formatter.py  test_prompt_loader.py  test_telegram_bot.py
(+76 files in other folders)
